--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Na.tasha/eclipse-workspace/DesafioCapgemini/lib/gson-2.8.5-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Na.tasha/eclipse-workspace/DesafioCapgemini/lib/gson-2.8.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
