Implementação MVC e persistência BD

--- a/.classpath
+++ b/.classpath
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-15">
+	<classpathentry kind="src" path=""/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Na.tasha/eclipse-workspace/DesafioCapgemini/lib/gson-2.8.5-javadoc.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Na.tasha/eclipse-workspace/DesafioCapgemini/lib/gson-2.8.2.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="lib" path="C:/Users/Na.tasha/Documents/DesafioCapgemini/lib/mysql-connector-java-8.0.25.jar"/>
+	<classpathentry kind="output" path=""/>
 </classpath>
