--- a/src/.classpath
+++ b/src/.classpath
@@ -8,5 +8,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="C:/Users/Na.tasha/Documents/DesafioCapgemini/lib/mysql-connector-java-8.0.25.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Na.tasha/Documents/dev/DesafioCapgemini/lib/mockito-all-1.10.19.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
